--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>4 Uno Rules You're Playing Wrong</title>	
+  <link rel="stylesheet" href="css/html5reset.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <title>4 Uno Rules You're Playing Wrong</title>	
 </head>	
 <body>	
   <main>	
@@ -19,12 +22,12 @@
       <p>You don't have to keep drawing cards until you get one that matches the discard pile, and you can even play it right away!</p>	
     </div>	
     <div class="blue">	
-      <h2>Blue -- You can't stack or chain cards</h2>	
-      <p>Sorry, you can't make your little brother pick up 6 cards by playing a draw 2 after a draw 4. If a draw card is played, the next player picks up the cards and misses their turn.</p>	
+      <h2 style="color: #C4C4C4;">Blue -- You can't stack or chain cards</h2>	
+      <p style="color: #C4C4C4;">Sorry, you can't make your little brother pick up 6 cards by playing a draw 2 after a draw 4. If a draw card is played, the next player picks up the cards and misses their turn.</p>	
     </div>	
     <div class="yellow">	
       <h2>Yellow --  You can win with an action card</h2>	
-      <p>Wild, Skip, even Reverse - doesn't matter as long as it matches the color!</p>	
+      <p style="color: #707070;">Wild, Skip, even Reverse - doesn't matter as long as it matches the color!</p>	
     </div>	
     <div class="green">	
       <h2>Green -- In two player mode Reverse is treated as a Skip</h2>	
@@ -32,7 +35,7 @@
     </div>	
   </main>	
   <footer>	
-    <p>University of Michigan School of Information <br/>	
+    <p style="text-align: right;" style="font-size: 20px;", style="padding: 15px 15px 15px 0">University of Michigan School of Information <br/>	
       &copy; Colleen van Lent, Drew Asselin - Web Design 2019-2020</p>	
   </footer>	
 </body>	
