Fixed h2 color contrast error

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <p style="color: #C4C4C4;">Sorry, you can't make your little brother pick up 6 cards by playing a draw 2 after a draw 4. If a draw card is played, the next player picks up the cards and misses their turn.</p>	
     </div>	
     <div class="yellow">	
-      <h2 style="color: #707070;">Yellow --  You can win with an action card</h2>	
+      <h2>Yellow --  You can win with an action card</h2>	
       <p style="color: #707070;">Wild, Skip, even Reverse - doesn't matter as long as it matches the color!</p>	
     </div>	
     <div class="green">	
