Updated div borders and footer style

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>	
   </main>	
   <footer>	
-    <p style="text-align: right;" style="font-size: 20px;", style="padding: 15px 15px 15px 0">University of Michigan School of Information <br/>	
+    <p style="text-align: right;font-size: 20px; padding: 15px 15px 15px 0;">University of Michigan School of Information <br/>	
       &copy; Colleen van Lent, Drew Asselin - Web Design 2019-2020</p>	
   </footer>	
 </body>	
