--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <p style="color: #707070;">Wild, Skip, even Reverse - doesn't matter as long as it matches the color!</p>	
     </div>	
     <div class="green">	
-      <h2>Green -- In two player mode Reverse is treated as a Skip</h2>	
+      <h2 style="color:white;">Green -- In two player mode Reverse is treated as a Skip</h2>	
       <p>The other player's turn is skipped and you can play again right away. Same with draw cards!</p>	
     </div>	
   </main>	
