Changed all styles to style.css

--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
       <p>You don't have to keep drawing cards until you get one that matches the discard pile, and you can even play it right away!</p>	
     </div>	
     <div class="blue">	
-      <h2 style="color: #C4C4C4;">Blue -- You can't stack or chain cards</h2>	
-      <p style="color: #C4C4C4;">Sorry, you can't make your little brother pick up 6 cards by playing a draw 2 after a draw 4. If a draw card is played, the next player picks up the cards and misses their turn.</p>	
+      <h2>Blue -- You can't stack or chain cards</h2>	
+      <p>Sorry, you can't make your little brother pick up 6 cards by playing a draw 2 after a draw 4. If a draw card is played, the next player picks up the cards and misses their turn.</p>	
     </div>	
     <div class="yellow">	
       <h2>Yellow --  You can win with an action card</h2>	
-      <p style="color: #707070;">Wild, Skip, even Reverse - doesn't matter as long as it matches the color!</p>	
+      <p>Wild, Skip, even Reverse - doesn't matter as long as it matches the color!</p>	
     </div>	
     <div class="green">	
-      <h2 style="color:white;">Green -- In two player mode Reverse is treated as a Skip</h2>	
+      <h2>Green -- In two player mode Reverse is treated as a Skip</h2>	
       <p>The other player's turn is skipped and you can play again right away. Same with draw cards!</p>	
     </div>	
   </main>	
   <footer>	
-    <p style="text-align: right;font-size: 20px; padding: 15px 15px 15px 0;">University of Michigan School of Information <br/>	
+    <p>University of Michigan School of Information <br/>	
       &copy; Colleen van Lent, Drew Asselin - Web Design 2019-2020</p>	
   </footer>	
 </body>	
